<resources>
    <string name="app_name">Geopedia</string>
    <string name="version_info">(0.1.60)</string>
    <string name="title_activity_welcome">LogIn</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Got it</string>

    <string name="slide_1_title">New City, New Places!</string>
    <string name="slide_1_desc">Explore the different interesting location in your city</string>

    <string name="slide_2_title">New places around you!</string>
    <string name="slide_2_desc">Find new places around you, wherever you are!</string>

    <string name="slide_3_title">Wallet friendly app</string>
    <string name="slide_3_desc">You can access most of the features of the app for free</string>

    <string name="welcome">Welcome to Geopedia</string>
    <string name="app_subtitle"><![CDATA[Places & Itineraries]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="title_activity_home_admin">Home (Admin)</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_desc">Administrator User</string>
    <string name="nav_header_title">Admin</string>
    <string name="action_settings">settings</string>
    <string name="reset_password">Reset password</string>
    <string name="receive_reset_link_on_email">Receive reset link on email</string>
    <string name="signingin">signing in...</string>
    <string name="create_account">Create Account</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="log_out">Log Out</string>
    <string name="menu_approved_locations">Approved Locations</string>
    <string name="menu_declined_locations">Declined Locations</string>
    <string name="menu_info">Information</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_events">Events</string>
    <string name="menu_others">Others</string>
    <string name="menu_questions">Questions</string>
    <string name="menu_feedback">Report Problem/Feedback</string>
    <string name="menu_about">About our app</string>
    <string name="sendmail">Send Email</string>
    <string name="detailaboutproblem">Details about the problem or feedback</string>
    <string name="sevofproblem">Severity of the problem</string>
    <string name="tellproblem">Tell me your problem</string>
    <string name="release_logo">Release logo</string>
    <string name="github_logo">Github logo</string>

    <string name="about_description1">This app will give you information about locations around you but in a different way.</string>
    <string name="about_description2">This application is developed as <b>MCA Semester IV college project</b>.</string>
    <string name="about_description3">This app is developed by <b>Atharva Ikhar (AI)</b></string>
    <string name="about_description4">This application is <b>currently in pre-release phase</b> with current version :</string>
    <string name="about_us">About us</string>
    <string name="no_profiles_present_in_the_app_database">No profiles present in the app/database</string>
    <string name="menu_settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="here_you_can_submit_your_question_which_will_saved_with_location_so_that_relavant_people_can_see_the_question_and_respond">Here you can submit your question, which will saved with location so that relavant people can see the question and respond</string>
    <string name="question_title">Question/Title</string>
    <string name="description_if_any">Description (If any)</string>
    <string name="want_to_arrange_an_event_and_invite_all_the_local_community_you_are_in_right_place_submit_a_request_and_invite_the_people">Want to arrange an event and invite all the local community, you are in right place, submit a request and invite the people :)</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="event_note">By default your current location will be taken for the event</string>
    <string name="submit_question">Submit Question</string>
    <string name="submit_request">Submit request</string>
    <string name="use_custom_location">Use Custom Location</string>
    <string name="upvote">Upvote</string>
    <string name="zero">0</string>
    <string name="no_questions_present">No questions present</string>
    <string name="add_question">Add question</string>
    <string name="addcomm">Add comment</string>
    <string name="comm">Comments</string>
    <string name="username">Username</string>
    <string name="answer_is">Answer is...</string>
    <string name="keywords_to_search">Keywords to search...</string>
    <string name="weather_pic">weather Pic</string>
    <string name="search_event_name">Search Event Name</string>
    <string name="what_to_read_more_about_about_your_city">What to read more about your city?</string>
    <string name="what_to_read_more_about_about_your_state">What to read more about your state?</string>
    <string name="no_events_present">No events present</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="user_support">User Support</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="pune_maharashtra">Pune, Maharashtra</string>
    <string name="_25_c">25°C</string>
    <string name="good_afternoon_what_are_you_looking_for">Good Afternoon! What are you looking for?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="p1">
        <a href="https://www.google.com/policies/privacy/">Google Play Services</a>
    </string>
    <string name="p2">
        <a href="https://firebase.google.com/policies/analytics">Google Analytics for Firebase</a>
    </string>
    <string name="p3">
        <a href="https://firebase.google.com/support/privacy/">Firebase Crashlytics</a>
    </string>
    <string name="p4">
        <a href="https://www.mapbox.com/legal/privacy">Mapbox</a>
    </string>
    <string name="mailLink">
        <a href="https://mailto:geopedia2022@gmail.com">geopedia2022@gmail.com</a>
    </string>
    <string name="contact_us">Contact Us</string>
    <string name="changes_to_this_terms_and_conditions">Changes to This Terms and Conditions</string>
    <string name="other_options">Other Options</string>
    <string name="profile_settings">Profile settings</string>
    <string name="profile_info">Profile Info</string>
    <string name="account_type">Account Type</string>
    <string name="accounttype_user">User (Free)</string>
    <string name="born_on">Born on</string>
    <string name="update_name">Update Name</string>
    <string name="Location_request_description">Know a location which you want to share with others? Submit a request so that we can very the place and add on our list</string>
    <string name="location_name">Location Name</string>
    <string name="about_the_location">About the location</string>
    <string name="category">Category</string>
    <string name="view_locations_near_you">View LOCATIONS NEAR YOU</string>
    <string name="delete">Delete</string>
    <string name="view_comments">View Comments</string>
    <string name="view_details">View details</string>
    <string name="add_location">Add Location</string>
    <string name="location_note">By default your current location will be taken for the location request</string>
    <string name="pending_location_requests">Pending Location requests</string>
    <string name="other_user_information">Other user information</string>
    <string name="user_information">User information</string>
    <string name="other_information">Other information</string>
    <string name="time">time</string>
    <string name="report_problem_feedback">Report problem/Feedback</string>
    <string name="please_add_the_address_about_event_and_other_required_information_here">Please add the address, about event and other required information here</string>
    <string name="event_on">Event on</string>
    <string name="event_type">Event Type</string>
    <string name="event_recurring">Event Recurring</string>
    <string name="event_on_date">event on Date</string>
    <string name="event_on_time">event on Time</string>
    <string name="more_info">More info</string>
</resources>