<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLocation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/T1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:text="Submit location request"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/T1Desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/T1"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="60dp"
                android:text="@string/Location_request_description"
                android:textColor="@color/defaultTextColor" />

            <EditText
                android:id="@+id/locationTitleFld"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/T1Desc1"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/location_name" />

            <EditText
                android:id="@+id/locationDescFld"
                android:layout_width="300dp"
                android:layout_height="221dp"
                android:layout_below="@id/locationTitleFld"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_corner_hollow"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/about_the_location"
                android:inputType="textMultiLine"
                android:paddingLeft="20dp"
                android:paddingTop="18dp"
                android:paddingRight="20dp" />

            <TextView
                android:id="@+id/locationNote"
                android:layout_width="300dp"
                android:layout_height="50sp"
                android:layout_below="@id/locationDescFld"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/event_note" />

            <!--Checkbox for use custom location-->
            <CheckBox
                android:id="@+id/customLocationCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_below="@id/locationNote"
                android:layout_marginStart="40dp"
                android:text="@string/use_custom_location"
                android:textColor="@color/defaultTextColor" />

            <EditText
                android:id="@+id/categoryLocation"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_below="@id/customLocationCheckbox"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_corner_hollow"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/category"
                android:inputType="textMultiLine"
                android:paddingLeft="20dp"
                android:paddingTop="18dp"
                android:editable="false"
                android:paddingRight="20dp" />

            <Button
                android:id="@+id/submitLocationBtn"
                android:layout_width="300dp"
                android:layout_height="50sp"
                android:text="@string/submit_request"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:layout_below="@id/categoryLocation"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>