<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mapbox="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/mapLayout"
        android:layout_width="match_parent"
        android:layout_height="310sp">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapbox:mapbox_cameraZoom="12" />

    </FrameLayout>

    <TextView
        android:id="@+id/T1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mapLayout"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/pune_maharashtra"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weatherTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mapLayout"
        android:layout_marginStart="300dp"
        android:layout_marginTop="12dp"
        android:text="@string/_25_c"
        android:textColor="@color/darkGrey"
        android:textSize="22sp"
        android:textStyle="italic" />

    <ScrollView
        android:id="@+id/greet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/T1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_afternoon_what_are_you_looking_for"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/weatherPic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/weather_pic" />

            <TextView
                android:id="@+id/weatherMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="--"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/weatherDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---------"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <Button
                android:id="@+id/viewLocations"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/view_locations_near_you"/>
            <LinearLayout
                android:id="@+id/questionSection"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_to_read_more_about_about_your_city"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/readMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_to_read_more_about_about_your_state"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/readMore1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>